# yesod-purescript

./: .gitignore  LICENSE  README.md  yesod-purescript.cabal
Yesod/: PureScript.hs
Yesod/PureScript/: Data.hs  EmbeddedGenerator.hs
test/: EmbeddedServer.hs  EmbeddedSpec.hs  RunGenerator.hs  StaticFiles.hs
test/ps/: ModA.purs
test/ps1/: ModA.js  ModA.purs
test/ps2/: ModB.purs
test/purescript/: ModA.purs
