name:                yesod-purescript
version:             0.0.2
synopsis:            PureScript integration for Yesod
description:         PureScript is an awesome statically typed language that compiles to JS and runs in your browser, and this module makes it easier to use PureScript in Yesod.
homepage:            https://github.com/mpietrzak/yesod-purescript
license:             MIT
license-file:        LICENSE
author:              Maciej Pietrzak
maintainer:          maciej@hell.cx
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.8

library
    exposed-modules: Yesod.PureScript
    other-modules: Yesod.PureScript.Data
    other-modules:
    build-depends: aeson >= 0.8
                 , base >= 4 && < 5
                 , containers
                 , data-default
                 , directory
                 , filepath
                 , fsnotify
                 , parsec
                 , purescript >= 0.5.6.2
                 , shakespeare >= 2
                 , text
                 , system-filepath
                 , system-fileio
                 , transformers
                 , utf8-string
                 , yesod-core
    ghc-options: -Wall

