name:                yesod-purescript
version:             0.0.5
synopsis:            PureScript integration for Yesod
description:         PureScript is an awesome statically typed language that compiles to JS and runs in your browser, and this module makes it easier to use PureScript in Yesod.
homepage:            https://github.com/mpietrzak/yesod-purescript
license:             MIT
license-file:        LICENSE
author:              Maciej Pietrzak
maintainer:          mpietrzak@gmail.com
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.8
stability:           experimental

extra-source-files: test/ps1/*.js
                  , test/ps1/*.purs
                  , test/ps2/*.purs
                  , test/*.hs

source-repository head
    type: git
    location: https://github.com/wuzzeb/yesod-purescript

library
    exposed-modules: Yesod.PureScript.EmbeddedGenerator
    build-depends: aeson >= 0.8
                 , base >= 4 && < 5
                 , bytestring
                 , containers
                 , data-default
                 , directory
                 , filepath
                 , formatting
                 , fsnotify
                 , Glob
                 , mtl
                 , purescript >= 0.7 && < 0.8
                 , regex-tdfa
                 , shakespeare >= 2
                 , text
                 , time
                 , system-filepath
                 , system-fileio
                 , template-haskell
                 , transformers
                 , yesod-core
                 , yesod-static
    ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall
  main-is: Spec.hs

  Build-Depends:
          yesod-purescript

        , base
        , hspec >= 2.1
        , process
        , template-haskell
        , text
        , yesod-static
